--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "laoyuegou\/export",
+  "name": "shalaaoao\/export",
   "description": "Package description here.",
   "require": {
     "php": "^7.1"
